Storybook and component updates for Accordion and Accordion Container, updates test specs

--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@
         </badge-component>
       </div> -->
 
-      <!-- <div class="cwrapper">
+      <div class="cwrapper">
         <button-component title-attr="Go Ahead" variant="default" btn-text="Default Button"></button-component>
 
         <button-component title-attr="Go Ahead" variant="danger" btn-text="Click Button"></button-component>
@@ -264,7 +264,7 @@
         </button-component>
 
         <button-component title-attr="Go Ahead" variant="active-blue" class-names="active" btn-text="Active State Button"></button-component>
-      </div> -->
+      </div>
 
       <!-- <div class="cwrapper">
         <button-group vertical>
