Badge, Button, Button Group Story clean up

--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
         </form-component>
       </div> -->
 
-      <div class="cwrapper">
+      <!-- <div class="cwrapper">
         <badge-component badge-id="badge1" elevation="6" shape="square" >Badge Base</badge-component>
 
         <badge-component badge-id="badge1" elevation="6" shape="square" icon >
@@ -228,7 +228,7 @@
       </div>
 
       <div class="cwrapper">
-        <button-component title-attr="Go Ahead" variant="default" btn-text="Default Button"></button-component>
+        <button-component title-attr="Go Ahead" block variant="default" btn-text="Default Button"></button-component>
 
         <button-component title-attr="Go Ahead" variant="danger" btn-text="Click Button"></button-component>
 
@@ -264,18 +264,18 @@
 
         <button-component title-attr="Button with text and Icon" slot-side="right" btn-text="Home" variant="primary"><i class="fa-solid fa-house"></i></button-component>
 
-        <button-component title-attr="Icon" slot-side="left" slot-side="right" btn-text="Home" variant="primary"
+        <button-component title-attr="Icon" slot-side="left" btn-text="Home" variant="primary"
           ><i class="fa-solid fa-house"></i><span>Text</span><i class="fa-solid fa-house"></i
         ></button-component>
 
         <button-component title-attr="Button with Badge" btn-text="With a badge" variant="primary">
-          <badge-component badge-id="badge12" background-color="light" bdg-position="right" size="sm">1</badge-component>
+          <badge-component badge-id="badge12" variant="light" bdg-position="right" size="sm">1</badge-component>
         </button-component>
 
         <button-component title-attr="Go Ahead" variant="active-blue" class-names="active" btn-text="Active State Button"></button-component>
-      </div>
+      </div> -->
 
-      <!-- <div class="cwrapper">
+      <div class="cwrapper">
         <button-group vertical>
           <button-component title-attr="Go Ahead" start size="sm" variant="active-blue" active vertical group-btn btn-text="Default Button"></button-component>
           <button-component title-attr="Go Ahead" variant="active-blue" size="sm" vertical group-btn btn-text="Default Button"></button-component>
@@ -287,7 +287,7 @@
           <button-component title-attr="Go Ahead" variant="danger" size="sm" group-btn btn-text="Default Button"></button-component>
           <button-component title-attr="Go Ahead" variant="success" size="sm" group-btn end btn-text="Default This Button"></button-component>
         </button-group>
-      </div> -->
+      </div>
 
       <!-- <div class="cwrapper">
         <card-component>
